Edit js files and add unit test